...
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thêm công việc"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:strokeColor="#CCCCCC"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/etTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:minLines="2"
                android:padding="16dp"
                android:textColor="#333333"
...
            android:text="Phân loại"
            android:textColor="#000000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnSelectRecordType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
...
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:strokeColor="#CCCCCC"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/etTaskDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint=""
                android:minLines="3"
...
                android:paddingVertical="14dp"
                android:textColor="#333333"
                android:textSize="14sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveTask"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:backgroundTint="#D9D9D9"
            android:text="Thêm lịch"
            android:textAllCaps="false"
            android:textSize="15sp"
...
